Add authentication to the app, update swagger tests
